New change happend

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -159,6 +159,22 @@ padding: 0px 0px !important;
 .loc{
     padding: 10px;
 }
+.post-description{
+    overflow-y:scroll;
+    scrollbar-width: none;
+}
+.post-code-bg{
+    width: fit-content;
+    min-width: 100;
+    background-color: #121212 !important;
+    width: 100% !important;
+    overflow-x: scroll !important;
+    position: relative;
+    padding: 1rem 1rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+}
 
 
 
